Fix reply file info overflow

--- a/less/_base.less
+++ b/less/_base.less
@@ -1363,6 +1363,8 @@ html.pos-notstaff {
   background: white;
   color: #555;
   opacity: 0.8;
+  overflow: hidden;
+  text-overflow: ellipsis;
   cursor: default;
   user-select: none;
 }
